--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     compile files('libs/gdata-spreadsheet-meta-3.0.jar')
     compile files('libs/google-http-client-jackson2-1.20.0.jar')
     compile files('libs/google.api-client-1.20.0.jar')
+    compile files('libs/mpandroidchartlibrary-2-1-3.jar')
     compile 'com.google.android.gms:play-services-identity:7.5.0'
     compile files('libs/jsr305.jar')
     compile files('libs/javax.mail.jar')
