--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.1"
     defaultConfig {
         applicationId "com.tinker.balancesheet"
-        minSdkVersion 17
+        minSdkVersion 16
         targetSdkVersion 22
         versionCode 1
         versionName "1.0"
@@ -30,7 +30,7 @@ dependencies {
     compile files('libs/gdata-spreadsheet-3.0.jar')
     compile files('libs/gdata-spreadsheet-meta-3.0.jar')
     compile files('libs/google-http-client-jackson2-1.20.0.jar')
-    compile files('libs/google.api-client-1.20.0.jar')
+    //compile files('libs/google-api-client-1.20.0.jar')
     compile files('libs/mpandroidchartlibrary-2-1-3.jar')
     compile 'com.google.android.gms:play-services-identity:7.5.0'
     compile files('libs/jsr305.jar')
