--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,8 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.2.0'
+    compile 'com.android.support:cardview-v7:21.+'
+    compile 'com.android.support:recyclerview-v7:21.+'
     compile files('libs/gdata-base-1.0.jar')
     compile files('libs/gdata-client-1.0.jar')
     compile files('libs/gdata-client-meta-1.0.jar')
