--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 22
     buildToolsVersion "23.0.1"
     defaultConfig {
-        applicationId "com.tinker.balancesheet"
+        applicationId "com.tinker.graphit"
         minSdkVersion 16
         targetSdkVersion 22
         versionCode 1
@@ -23,8 +23,8 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.2.0'
-    compile 'com.android.support:cardview-v7:21.+'
-    compile 'com.android.support:recyclerview-v7:21.+'
+    compile 'com.android.support:cardview-v7:22.+'
+    compile 'com.android.support:recyclerview-v7:22.+'
     compile files('libs/gdata-base-1.0.jar')
     compile files('libs/gdata-client-1.0.jar')
     compile files('libs/gdata-client-meta-1.0.jar')
@@ -37,4 +37,9 @@ dependencies {
     compile 'com.google.android.gms:play-services-identity:7.5.0'
     compile files('libs/jsr305.jar')
     compile files('libs/javax.mail.jar')
+    testCompile 'junit:junit:4.12'
+    androidTestCompile 'com.android.support:support-annotations:22.2.1'
+    androidTestCompile 'com.android.support.test:runner:0.2'
+    androidTestCompile 'com.android.support.test:rules:0.2'
+    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.1'
 }
