--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion "23.0.1"
+    compileSdkVersion 23
+    buildToolsVersion "23.0.2"
     defaultConfig {
         applicationId "com.tinker.graphit"
-        minSdkVersion 16
-        targetSdkVersion 22
+        minSdkVersion 18
+        targetSdkVersion 23
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner 'android.support.test.runner.AndroidJUnitRunner'
@@ -23,9 +23,9 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:22.2.0'
-    compile 'com.android.support:cardview-v7:22.+'
-    compile 'com.android.support:recyclerview-v7:22.+'
+    compile 'com.android.support:appcompat-v7:23.3.0'
+    compile 'com.android.support:cardview-v7:23.0.0'
+    compile 'com.android.support:recyclerview-v7:23.0.0'
     compile files('libs/gdata-base-1.0.jar')
     compile files('libs/gdata-client-1.0.jar')
     compile files('libs/gdata-client-meta-1.0.jar')
@@ -35,12 +35,13 @@ dependencies {
     compile files('libs/google-http-client-jackson2-1.20.0.jar')
     //compile files('libs/google-api-client-1.20.0.jar')
     compile files('libs/mpandroidchartlibrary-2-1-3.jar')
-    compile 'com.google.android.gms:play-services-identity:7.5.0'
+    compile 'com.google.android.gms:play-services-identity:8.4.0'
     compile files('libs/jsr305.jar')
     compile files('libs/javax.mail.jar')
     testCompile 'junit:junit:4.12'
-    androidTestCompile 'com.android.support:support-annotations:22.2.1'
-    androidTestCompile 'com.android.support.test:runner:0.2'
+    androidTestCompile 'com.android.support:support-annotations:23.3.0'
+    androidTestCompile 'com.android.support.test:runner:0.4'
     androidTestCompile 'com.android.support.test:rules:0.2'
-    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.1'
+    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.1'
+    androidTestCompile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.2'
 }
