--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,10 @@ android {
     }
 }
 
+repositories {
+    maven { url "https://jitpack.io" }
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.3.0'
@@ -34,7 +38,7 @@ dependencies {
     compile files('libs/gdata-spreadsheet-meta-3.0.jar')
     compile files('libs/google-http-client-jackson2-1.20.0.jar')
     //compile files('libs/google-api-client-1.20.0.jar')
-    compile files('libs/mpandroidchartlibrary-2-1-3.jar')
+    compile 'com.github.PhilJay:MPAndroidChart:v2.2.4'
     compile 'com.google.android.gms:play-services-identity:8.4.0'
     compile files('libs/jsr305.jar')
     compile files('libs/javax.mail.jar')
