--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,11 +19,12 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+        setProperty("archivesBaseName", "Tinker-GraphIt-$versionName")
         testInstrumentationRunner 'android.support.test.runner.AndroidJUnitRunner'
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -37,7 +38,6 @@ repositories {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'com.android.support:cardview-v7:23.0.0'
     compile 'com.android.support:recyclerview-v7:23.0.0'
@@ -48,7 +48,6 @@ dependencies {
     compile files('libs/gdata-spreadsheet-3.0.jar')
     compile files('libs/gdata-spreadsheet-meta-3.0.jar')
     compile files('libs/google-http-client-jackson2-1.20.0.jar')
-    //compile files('libs/google-api-client-1.20.0.jar')
     compile 'com.github.PhilJay:MPAndroidChart:v2.2.4'
     compile 'com.google.android.gms:play-services-identity:8.4.0'
     compile files('libs/jsr305.jar')
