--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,7 +49,9 @@ dependencies {
     compile files('libs/gdata-spreadsheet-meta-3.0.jar')
     compile files('libs/google-http-client-jackson2-1.20.0.jar')
     compile 'com.github.PhilJay:MPAndroidChart:v2.2.4'
-    compile 'com.google.android.gms:play-services-identity:8.4.0'
+    compile 'com.google.android.gms:play-services-identity:9.0.2'
+    compile 'com.google.android.gms:play-services-auth:9.0.2'
+    compile 'com.google.guava:guava:19.0'
     compile files('libs/jsr305.jar')
     compile files('libs/javax.mail.jar')
     testCompile 'junit:junit:4.12'
