--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,10 @@
             android:label="@string/app_name" >
         </activity>
 
+        <activity
+            android:name="com.tinker.graphit.WebViewActivity"
+            android:theme="@android:style/Theme.NoTitleBar" />
+
         <meta-data
             android:name="io.fabric.ApiKey"
             android:value="5e7b2d3b3a45023239643b1dcd1e1cb3d5650563" />
