--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,8 +17,8 @@ android {
         applicationId "com.tinker.graphit"
         minSdkVersion 18
         targetSdkVersion 23
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.1"
         setProperty("archivesBaseName", "Tinker-GraphIt-$versionName")
         testInstrumentationRunner 'android.support.test.runner.AndroidJUnitRunner'
     }
@@ -41,6 +41,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'com.android.support:cardview-v7:23.0.0'
     compile 'com.android.support:recyclerview-v7:23.0.0'
+    compile 'com.android.support:design:23.4.0'
     compile files('libs/gdata-base-1.0.jar')
     compile files('libs/gdata-client-1.0.jar')
     compile files('libs/gdata-client-meta-1.0.jar')
@@ -55,7 +56,7 @@ dependencies {
     compile files('libs/jsr305.jar')
     compile files('libs/javax.mail.jar')
     testCompile 'junit:junit:4.12'
-    androidTestCompile 'com.android.support:support-annotations:23.3.0'
+    androidTestCompile 'com.android.support:support-annotations:23.4.0'
     androidTestCompile 'com.android.support.test:runner:0.4'
     androidTestCompile 'com.android.support.test:rules:0.2'
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.1'
