--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,7 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled true
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -50,8 +50,8 @@ dependencies {
     compile files('libs/gdata-spreadsheet-meta-3.0.jar')
     compile files('libs/google-http-client-jackson2-1.20.0.jar')
     compile 'com.github.PhilJay:MPAndroidChart:v2.2.4'
-    compile 'com.google.android.gms:play-services-identity:9.0.2'
-    compile 'com.google.android.gms:play-services-auth:9.0.2'
+    compile 'com.google.android.gms:play-services-identity:9.4.0'
+    compile 'com.google.android.gms:play-services-auth:9.4.0'
     compile 'com.google.guava:guava:19.0'
     compile files('libs/jsr305.jar')
     compile files('libs/javax.mail.jar')
